--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,49 @@
 ---
 layout: default
+permalink: /
 ---
-<div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
+<section>
+  <article>
+    <aside>
+      <time datetime="{{ page.date }}">{{ page.humanized_date }}</time>
+    </aside>
+      <header>
+        {{ page.title }}
+      </header>
+      <p class="tags">
+        {% for tag in page.tags %}
+          <a href="/tags/{{ tag }}">{{ tag }}</a>
+        {% endfor %}
+      </p>
+      <div class="content">
+        {{ content }}
+      </div>
   </article>
+  {% if page.comments %}
+    <div id="disqus_thread"></div>
+    <script>
+      /**
+      * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+      */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
 
-</div>
+        s.src = '//jacekbrozek.disqus.com/embed.js';
+
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    </script>
+
+    <noscript>
+      Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
+    </noscript>
+  {% endif %}
+</section>
