--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,9 +1,44 @@
+@font-face
+{
+  font-family: 'MyriadProCondRegular';
+  src: url('../fonts/myriadpro-cond-webfont.eot');
+  src: url('../fonts/myriadpro-cond-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/myriadpro-cond-webfont.woff') format('woff'),
+       url('../fonts/myriadpro-cond-webfont.ttf') format('truetype'),
+       url('../fonts/myriadpro-cond-webfont.svg#MyriadProCondRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face
+{
+  font-family: 'MyriadProCondBold';
+  src: url('../fonts/myriadpro-boldcond.eot');
+  src: url('../fonts/myriadpro-boldcond.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/myriadpro-boldcond.woff') format('woff'),
+       url('../fonts/myriadpro-boldcond.ttf') format('truetype'),
+       url('../fonts/myriadpro-boldcond.svg#MyriadProCondBold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face
+{
+  font-family: 'MyriadPro';
+  src: url('../fonts/myriadpro.eot');
+  src: url('../fonts/myriadpro.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/myriadpro.woff') format('woff'),
+       url('../fonts/myriadpro.ttf') format('truetype'),
+       url('../fonts/myriadpro.svg#MyriadPro') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 /**
  * Reset some basic elements
  */
-body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
+* {
     margin: 0;
     padding: 0;
 }
@@ -13,17 +48,13 @@ dl, dd, ol, ul, figure {
 /**
  * Basic styling
  */
-body {
-    font-family: $base-font-family;
-    font-size: $base-font-size;
-    line-height: $base-line-height;
-    font-weight: 300;
-    color: $text-color;
-    background-color: $background-color;
-    -webkit-text-size-adjust: 100%;
+body
+{
+  border-top: 29px solid #000;
+  background: #fbfbfb;
+  font-family: MyriadProCondRegular;
+  position: relative;
 }
-
-
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
@@ -32,9 +63,8 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
+  margin-bottom: $spacing-unit / 2;
 }
-
 
 
 /**
@@ -44,7 +74,6 @@ img {
     max-width: 100%;
     vertical-align: middle;
 }
-
 
 
 /**
@@ -59,23 +88,6 @@ figcaption {
 }
 
 
-
-/**
- * Lists
- */
-ul, ol {
-    margin-left: $spacing-unit;
-}
-
-li {
-    > ul,
-    > ol {
-         margin-bottom: 0;
-    }
-}
-
-
-
 /**
  * Headings
  */
@@ -84,40 +96,20 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-
-/**
- * Links
- */
-a {
-    color: $brand-color;
-    text-decoration: none;
-
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
-
-    &:hover {
-        color: $text-color;
-        text-decoration: underline;
-    }
-}
-
-
-
 /**
  * Blockquotes
  */
-blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
-    padding-left: $spacing-unit / 2;
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic;
+  blockquote {
+  color: $grey-color;
+  border-left: 4px solid $grey-color-light;
+  padding-left: $spacing-unit / 2;
+  font-size: 18px;
+  letter-spacing: -1px;
+  font-style: italic;
 
-    > :last-child {
-        margin-bottom: 0;
-    }
+  > :last-child {
+    margin-bottom: 0;
+  }
 }
 
 
@@ -127,25 +119,25 @@ blockquote {
  */
 pre,
 code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+  font-size: 15px;
+  border: 1px solid $grey-color-light;
+  border-radius: 3px;
+  background-color: #eef;
 }
 
 code {
-    padding: 1px 5px;
+  padding: 1px 5px;
 }
 
 pre {
-    padding: 8px 12px;
-    overflow-x: scroll;
+  padding: 8px 12px;
+  overflow-x: scroll;
 
-    > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
-    }
+  > code {
+    border: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 
@@ -154,20 +146,20 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
-    @extend %clearfix;
+  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: $spacing-unit;
+  padding-left: $spacing-unit;
+  @extend %clearfix;
 
-    @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
-    }
+  @include media-query($on-laptop) {
+    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+    max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+    padding-right: $spacing-unit / 2;
+    padding-left: $spacing-unit / 2;
+  }
 }
 
 
@@ -177,11 +169,11 @@ pre {
  */
 %clearfix {
 
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 
@@ -190,15 +182,14 @@ pre {
  * Icons
  */
 .icon {
+  > svg {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
 
-    > svg {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        vertical-align: middle;
-
-        path {
-            fill: $grey-color;
-        }
+    path {
+      fill: $grey-color;
     }
+  }
 }
