--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <a id="up" href="#">GO UP!</a>
   <div id="copy">
-    <p>by jacek<strong>brożek</strong> 2012</p>
+    <p>by jacek<strong>brożek</strong> {{ site.time | date: "%Y" }}</p>
     <p>graphics - marcin<strong>michalak</strong></p>
   </div>
 </footer>
