--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,230 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Jacek Brozek - personal website</title>
+  <link href="https://fonts.googleapis.com/css?family=Chivo:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+</head>
+<body>
+  <div class="content">
+    <div class="row">
+      <div class="col about">
+        <section>
+          <main>
+            <header>
+              <h1>
+                <a href="#">
+                  <img src="images/logo.png">
+                </a>
+              </h1>
+              <div class="avatar">
+                <img src="images/me.png">
+              </div>
+            </header>
+            <h2>
+              Hello, I’m Jacek Brożek<br/>
+              and I’m here to help you<br/>
+              make better software
+            </h2>
+            <p>
+              Experienced Solution Architect with a demonstrated history of working in the internet industry. Skilled in Object Oriented Design, Ruby, PostgreSQL, Node.js, CoffeeScript, and Enterprise Architecture.
+            </p>
+          </main>
 
-  {% include head.html %}
+          <footer>
+            <div class="contact">
+              <h3>Contact:</h3>
+              <ul>
+                <li>
+                  contact@jacekbrozek.com
+                </li>
+                <li>
+                  (+48) 695 962 791
+                </li>
+              </ul>
+            </div>
+            <div class="social">
+              <h3>Find me here:</h3>
+              <ul>
+                <li>
+                  <a href="#">
+                    <img src="images/twitter-icon.png">
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="images/linkedin-icon.png">
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="images/facebook-icon.png">
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="images/medium-icon.png">
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </footer>
+        </section>
+      </div>
+      <div class="col scroll">
+        <div class="tech shadow">
+          <section>
+            <header>
+              <h2>Technologies  <br>I worked with</h2>
+              <h4>More about me</h4>
+            </header>
+            <p>
+              Możesz np. tutaj zmienić mi tekst, na docelowy, a ja zerknę później czy nie trzeba tego przekomponować.
+            </p>
+            <ul>
+              <li>
+                <a href="#">
+                  <img src="images/tech-placeholder.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/tech-placeholder.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/tech-placeholder.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/tech-placeholder.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/tech-placeholder.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/tech-placeholder.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/tech-placeholder.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/tech-placeholder.png">
+                </a>
+              </li>
+            </ul>
+            <a class="scroll-link scroll-down" href="#" data-target="blog">
+              <img src="images/scroll-down-icon.png">
+              <span>Scroll down for more</span>
+            </a>
+          </div>
+        </section>
 
-  <body>
+        <div class="blog">
+          <div class="wrapper">
+            <h2 class="text-white">Articles I wrote</h2>
+            <p>
+              Some of my articles about lorem ipsum dolor sit amet.
+            </p>
 
-    {% include header.html %}
+            <section>
+              <article>
+                <main>
+                  <header>Ring Models for Intelligent Tyres</header>
+                  <footer>3 min read • Technology</footer>
+                </main>
+                <aside>
+                  <img src="images/arrow-icon.png"/>
+                </aside>
+              </article>
+              <article>
+                <main>
+                  <header>How AI Is Now Being Trained To ‘Detoxify’ Social Media</header>
+                  <footer>3 min read • Technology</footer>
+                </main>
+                <aside>
+                  <img src="images/arrow-icon.png"/>
+                </aside>
+              </article>
+              <footer>
+                <img src="images/arrow-icon.png"/>
+                <a href="#">View all Articles on Medium</a>
+              </footer>
+            </section>
+            <footer>
+              <img src="images/arrow-down-icon.png"/>
+              <a class="scroll-link" data-target="speaking" href="#">Scroll down for more</a>
+            </footer>
+          </div>
+        </div>
 
-    {{ content }}
+        <div class="speaking shadow">
+          <div class="wrapper">
+            <h2>Conferences I spoke at</h2>
+            <ul>
+              <li>
+                <a href="#">
+                  Consumer Electronics Show, Las Vegas, USA, Jan 2019
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  IBM think, Las Vegas, USA, Feb 2019
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Google Cloud Next, San Francisco, USA, April 2019
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  O’Reilly Media Artificial Intelligence, New York City, USA, Octobe 2019
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  IBM think, Las Vegas, USA, Feb 2019
+                </a>
+              </li>
+            </ul>
+            <a class="scroll-link scroll-up desktop" data-target="tech" href="#">
+              <img src="images/scroll-up-icon.png">
+              <span>Scroll to the top!</span>
+            </a>
 
-    {% include footer.html %}
-
-  </body>
-
+            <a class="scroll-link scroll-up mobile" data-target="about" href="#">
+              <img src="images/scroll-up-icon.png">
+              <span>Scroll to the top!</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript">
+    var scrollLinks = document.getElementsByClassName('scroll-link');
+    for(link of scrollLinks) {
+      link.addEventListener('click', (e) => {
+        var element = e.currentTarget;
+        var targetId = element.dataset.target;
+        var targetElement = document.getElementsByClassName(targetId)[0];
+        targetElement.scrollIntoView({behavior: 'smooth'});
+        e.preventDefault();
+      })
+    }
+  </script>
+</body>
 </html>
