some content updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
               make better software
             </h2>
             <p>
-              Experienced Solution Architect with a demonstrated history of working in the internet industry. Skilled in Object Oriented Design, Ruby, PostgreSQL, Node.js, CoffeeScript, and Enterprise Architecture.
+              Experienced Solution Architect with a demonstrated history of working in the internet industry. Skilled in Object Oriented Design, Ruby, PostgreSQL, Node.js, React/Angular, and Enterprise Architecture.
             </p>
           </main>
 
@@ -38,7 +38,7 @@
               <h3>Contact:</h3>
               <ul>
                 <li>
-                  contact@jacekbrozek.com
+                  hi@jacekbrozek.com
                 </li>
                 <li>
                   (+48) 695 962 791
@@ -49,22 +49,17 @@
               <h3>Find me here:</h3>
               <ul>
                 <li>
-                  <a href="#">
+                  <a href="https://twitter.com/jac33k">
                     <img src="images/twitter-icon.png">
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/jacekbrozek/">
                     <img src="images/linkedin-icon.png">
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    <img src="images/facebook-icon.png">
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
+                  <a href="https://medium.com/@jac33k">
                     <img src="images/medium-icon.png">
                   </a>
                 </li>
@@ -81,7 +76,7 @@
               <h4>More about me</h4>
             </header>
             <p>
-              Możesz np. tutaj zmienić mi tekst, na docelowy, a ja zerknę później czy nie trzeba tego przekomponować.
+              Passion to software development led me through a variaty of technologies.
             </p>
             <ul>
               <li>
@@ -142,7 +137,7 @@
             <section>
               <article>
                 <main>
-                  <header>Ring Models for Intelligent Tyres</header>
+                  <header>Coming soon</header>
                   <footer>3 min read • Technology</footer>
                 </main>
                 <aside>
@@ -151,7 +146,7 @@
               </article>
               <article>
                 <main>
-                  <header>How AI Is Now Being Trained To ‘Detoxify’ Social Media</header>
+                  <header>Coming soon</header>
                   <footer>3 min read • Technology</footer>
                 </main>
                 <aside>
@@ -160,7 +155,7 @@
               </article>
               <footer>
                 <img src="images/arrow-icon.png"/>
-                <a href="#">View all Articles on Medium</a>
+                <a href="https://medium.com/@jac33k">View all Articles on Medium</a>
               </footer>
             </section>
             <footer>
@@ -175,28 +170,28 @@
             <h2>Conferences I spoke at</h2>
             <ul>
               <li>
-                <a href="#">
-                  Consumer Electronics Show, Las Vegas, USA, Jan 2019
+                <a href="https://krk-rb.pl/">
+                  KRK.rb, Cracow, Poland, 2019
                 </a>
               </li>
               <li>
-                <a href="#">
-                  IBM think, Las Vegas, USA, Feb 2019
+                <a href="https://twitter.com/rubyunconf">
+                  Ruby UnConference, London, UK, 2017
                 </a>
               </li>
               <li>
-                <a href="#">
-                  Google Cloud Next, San Francisco, USA, April 2019
+                <a href="https://www.webit.org/festival/2016/">
+                  Webit Festival, Sofia, Bulgaria, 2016
                 </a>
               </li>
               <li>
-                <a href="#">
-                  O’Reilly Media Artificial Intelligence, New York City, USA, Octobe 2019
+                <a href="https://careercon.pl/en/konferencja/kariera-it-warszawa-17-10-2015">
+                  KarieraIT, Warsaw, Poland, 2015
                 </a>
               </li>
               <li>
-                <a href="#">
-                  IBM think, Las Vegas, USA, Feb 2019
+                <a href="http://prug.pl">
+                  Poznan Ruby Users Group, Poznan, Poland, 2013-present
                 </a>
               </li>
             </ul>
