copy, copy, copy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
               make better software
             </h2>
             <p>
-              Experienced Solution Architect with a demonstrated history of working in the internet industry. Skilled in Object Oriented Design, Ruby, PostgreSQL, Node.js, React/Angular, and Enterprise Architecture.
+              Experienced Solution Architect with a demonstrated history of working in the internet industry. Skilled in Object Oriented Design, Ruby, PostgreSQL, Node.js, React/Angular, and Enterprise Architecture. Also, helped many teams to scale up, build the culture and deliver great solutions on time.
             </p>
           </main>
 
@@ -131,7 +131,7 @@
           <div class="wrapper">
             <h2 class="text-white">Articles I wrote</h2>
             <p>
-              Some of my articles about lorem ipsum dolor sit amet.
+              Some of my the most recent articles.
             </p>
 
             <section>
