--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQKN7E9RJH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZQKN7E9RJH');
+  </script>
   <title>Jacek Brozek - personal website</title>
   <link href="https://fonts.googleapis.com/css?family=Chivo:300,400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
