Update bio & projects

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,10 +35,11 @@
             <h2>
               Hello, I’m Jacek Brożek<br/>
               and I’m here to help you<br/>
-              make better software
+              develop better products
             </h2>
             <p>
-              Experienced Solution Architect with a demonstrated history of working in the internet industry. Skilled in Object Oriented Design, Ruby, PostgreSQL, Node.js, React/Angular, and Enterprise Architecture. Also, helped many teams to scale up, build the culture and deliver great solutions on time.
+              Experienced Software Architect with a demonstrated history of working in the internet industry. Skilled in web, backend, frontend, and Enterprise Architecture. I helped many teams to scale up, build the culture and deliver great solutions on time. Currently, bootstrapping
+multiple digital products.
             </p>
           </main>
 
@@ -81,51 +82,21 @@
         <div class="tech shadow">
           <section>
             <header>
-              <h2>Technologies  <br>I worked with</h2>
+              <h2>Projects  <br>I work on</h2>
               <h4>More about me</h4>
             </header>
             <p>
-              Passion to software development led me through a variaty of technologies.
+              Bootstrapping online businesses, working on strategy, and making great products using technology.
             </p>
             <ul>
               <li>
-                <a href="#">
-                  <img src="images/tech-placeholder.png">
+                <a href="https://mailist.app">
+                  <img alt="Mailist Weekly Newsletter of Your Bookmarks" src="https://uploads-ssl.webflow.com/5b02f1bd7167d087433cc13e/5b05b54db6c6cf0eaba0a590_mailist-logo.svg">
                 </a>
               </li>
               <li>
-                <a href="#">
-                  <img src="images/tech-placeholder.png">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/tech-placeholder.png">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/tech-placeholder.png">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/tech-placeholder.png">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/tech-placeholder.png">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/tech-placeholder.png">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/tech-placeholder.png">
+                <a href="https://viquestion.com">
+                  <img alt="ViQuestion - Sell more with video surveys" src="https://uploads-ssl.webflow.com/5fa445cc40e135f31c7ab80d/5fa447eb48fff994886831a2_logo-color.svg">
                 </a>
               </li>
             </ul>
