--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,19 @@ p {
   margin: 36px 226px 0 96px;
   padding: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+}
+
+.tech ul li a {
+  filter: grayscale(1);
+}
+
+.tech ul li a:hover {
+  filter: none;
+}
+
+.tech ul li a img {
+  height: 30px;
 }
 
 .tech .scroll-down {
