--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,16 +86,16 @@ multiple digital products.
               <h4>More about me</h4>
             </header>
             <p>
-              Bootstrapping online businesses, working on strategy, and making great products using technology.
+              Bootstrapping online businesses, working on strategy, and making products great with technology.
             </p>
             <ul>
               <li>
-                <a href="https://mailist.app">
+                <a title="Mailist Weekly Newsletter of Your Bookmarks" href="https://mailist.app">
                   <img alt="Mailist Weekly Newsletter of Your Bookmarks" src="https://uploads-ssl.webflow.com/5b02f1bd7167d087433cc13e/5b05b54db6c6cf0eaba0a590_mailist-logo.svg">
                 </a>
               </li>
               <li>
-                <a href="https://viquestion.com">
+                <a title="ViQuestion - Sell more with video surveys" href="https://viquestion.com">
                   <img alt="ViQuestion - Sell more with video surveys" src="https://uploads-ssl.webflow.com/5fa445cc40e135f31c7ab80d/5fa447eb48fff994886831a2_logo-color.svg">
                 </a>
               </li>
